# dsl-statistics

./: .gitignore  analysis.ipynb  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-17-dsl-scraper.md  2026-04-18-dsl-scraper.md
docs/superpowers/specs/: 2026-04-17-dsl-scraper-design.md  2026-04-18-dsl-scraper-design.md
src/dsl_statistics/: cli.py  db.py
src/dsl_statistics/scrapers/: auth.py  statlocker.py  steam.py  tournament.py
tests/: test_db.py  test_steam.py
