[project]
name = "dsl-statistics"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "playwright>=1.52",
    "requests>=2.32",
    "python-dotenv>=1.1",
    "pandas>=2.2",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "scipy>=1.15",
    "scipy-stubs~=1.17.1",
    "rich>=15.0.0",
    "psycopg[binary]>=3.3.3",
]

[project.scripts]
dsl-scrape = "dsl_statistics.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "jupyterlab>=4.5",
]

[tool.uv]
package = true
